// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable aggregate 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  background: #F6F6F6;
  color: #444444;
  border-bottom: solid 2px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border-top: solid 2px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: top;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

@media only screen and (max-width:699px) {
  .c3 {
    border-bottom: solid 2px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    border-top: solid 2px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className=""
      >
        <th
          className="c2"
          scope="col"
        >
          <div
            className="c3"
          >
            <span
              className="c4"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c3"
          >
            <span
              className="c4"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              one
            </span>
          </div>
        </td>
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              two
            </span>
          </div>
        </td>
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
    <tfoot
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c6"
        >
          <div
            className="c8"
          />
        </td>
        <td
          className="c6"
        >
          <div
            className="c8"
          >
            <span
              className="c4"
            >
              3
            </span>
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`DataTable basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  background: #F6F6F6;
  color: #444444;
  border-bottom: solid 2px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: top;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

@media only screen and (max-width:699px) {
  .c3 {
    border-bottom: solid 2px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className=""
      >
        <th
          className="c2"
          scope="col"
        >
          <div
            className="c3"
          >
            <span
              className="c4"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c3"
          >
            <span
              className="c4"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              one
            </span>
          </div>
        </td>
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              two
            </span>
          </div>
        </td>
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable empty 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className=""
      />
    </thead>
    <tbody
      className=""
    />
  </table>
</div>
`;

exports[`DataTable footer 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  background: #F6F6F6;
  color: #444444;
  border-bottom: solid 2px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border-top: solid 2px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: top;
}

.c4 {
  font-size: 18px;
  line-height: 24px;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

.c5 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

@media only screen and (max-width:699px) {
  .c3 {
    border-bottom: solid 2px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    border-top: solid 2px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c8 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className=""
      >
        <th
          className="c2"
          scope="col"
        >
          <div
            className="c3"
          >
            <span
              className="c4"
            >
              A
            </span>
          </div>
        </th>
        <th
          className="c5"
          scope="col"
        >
          <div
            className="c3"
          >
            <span
              className="c4"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              one
            </span>
          </div>
        </td>
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              two
            </span>
          </div>
        </td>
        <td
          className="c6"
        >
          <div
            className="c7"
          >
            <span
              className="c4"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
    <tfoot
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c6"
        >
          <div
            className="c8"
          >
            <span
              className="c4"
            >
              Total
            </span>
          </div>
        </td>
        <td
          className="c6"
        >
          <div
            className="c8"
          />
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`DataTable groupBy 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <table
    class="StyledDataTable-IgJCp kyMnvB"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-hWAKAt kjOblm"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cUbIUQ"
        >
          <button
            aria-label="expand"
            class="StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy jbzcdz"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-kFlXVF dQfzRl"
                color="border-light"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-lbpJOV kOARIO"
          scope="col"
        >
          <div
            class="StyledBox-YaZNy dZMygZ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              A
            </span>
          </div>
        </th>
        <th
          class="StyledTable__StyledTableCell-gxerXr fCKcls"
          scope="col"
        >
          <div
            class="StyledBox-YaZNy dZMygZ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-bnfSpy gMydNw"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cUbIUQ"
        >
          <button
            aria-label="expand"
            class="StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy ifVFVU"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-kFlXVF dQfzRl"
                color="border-light"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-gXoyl cpOwyG"
          scope="row"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          />
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cUbIUQ"
        >
          <button
            aria-label="expand"
            class="StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy ifVFVU"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-kFlXVF dQfzRl"
                color="border-light"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-hwKlLZ fVYtGJ"
          scope="row"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable groupBy 2`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <table
    class="StyledDataTable-IgJCp kyMnvB"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-hWAKAt kjOblm"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cUbIUQ"
        >
          <button
            aria-label="expand"
            class="StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy jbzcdz"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-kFlXVF dQfzRl"
                color="border-light"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-lbpJOV kOARIO"
          scope="col"
        >
          <div
            class="StyledBox-YaZNy dZMygZ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              A
            </span>
          </div>
        </th>
        <th
          class="StyledTable__StyledTableCell-gxerXr fCKcls"
          scope="col"
        >
          <div
            class="StyledBox-YaZNy dZMygZ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              B
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-bnfSpy gMydNw"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cUbIUQ"
        >
          <button
            aria-label="expand"
            class="StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy ifVFVU"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-kFlXVF dQfzRl"
                color="border-light"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-gXoyl cpOwyG"
          scope="row"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              one
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          />
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cUbIUQ"
        >
          <button
            aria-label="expand"
            class="StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy ifVFVU"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-kFlXVF dQfzRl"
                color="border-light"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </td>
        <th
          class="StyledTable__StyledTableCell-hwKlLZ fVYtGJ"
          scope="row"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              two
            </span>
          </div>
        </th>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable resizeable 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  background: #F6F6F6;
  color: #444444;
  border-bottom: solid 2px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  margin: 0;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  border-right: solid 1px [object Object];
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin: 0;
  padding: 0;
}

.c9 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: top;
}

.c5 {
  font-size: 18px;
  line-height: 24px;
}

.c6 {
  cursor: col-resize;
}

.c1 {
  border-spacing: 0;
  border-collapse: collapse;
  height: 100%;
}

.c2 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

.c8 {
  margin: 0;
  padding: 0;
  font-weight: inherit;
  text-align: inherit;
  height: inherit;
  vertical-align: bottom;
}

@media only screen and (max-width:699px) {
  .c4 {
    border-bottom: solid 2px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c4 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:699px) {
  .c10 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c10 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c10 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c3 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    border-right: solid 1px [object Object];
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c7 {
    padding: 0;
  }
}

<div
  className="c0"
>
  <table
    className="c1"
  >
    <thead
      className=""
    >
      <tr
        className=""
      >
        <th
          className="c2"
          scope="col"
        >
          <div
            className="c3"
          >
            <div
              className="c4"
            >
              <span
                className="c5"
              >
                A
              </span>
            </div>
            <div
              className="c6 c7"
              onMouseDown={[Function]}
            />
          </div>
        </th>
        <th
          className="c8"
          scope="col"
        >
          <div
            className="c3"
          >
            <div
              className="c4"
            >
              <span
                className="c5"
              >
                B
              </span>
            </div>
            <div
              className="c6 c7"
              onMouseDown={[Function]}
            />
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className=""
    >
      <tr
        className=""
      >
        <td
          className="c9"
        >
          <div
            className="c10"
          >
            <span
              className="c5"
            >
              one
            </span>
          </div>
        </td>
        <td
          className="c9"
        >
          <div
            className="c10"
          >
            <span
              className="c5"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        className=""
      >
        <td
          className="c9"
        >
          <div
            className="c10"
          >
            <span
              className="c5"
            >
              two
            </span>
          </div>
        </td>
        <td
          className="c9"
        >
          <div
            className="c10"
          >
            <span
              className="c5"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable sort 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <table
    class="StyledDataTable-IgJCp kyMnvB"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-hWAKAt kjOblm"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <th
          class="StyledTable__StyledTableCell-hvERU jtNqmJ"
          scope="col"
        >
          <button
            class="Sorter__SorterButton-hLSXcM iMMGVc StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy iPubuO"
            >
              <span
                class="StyledText-dmaDlZ cuXUhH"
              >
                A
              </span>
            </div>
          </button>
        </th>
        <th
          class="StyledTable__StyledTableCell-jGOvXo nrWSA"
          scope="col"
        >
          <button
            class="Sorter__SorterButton-hLSXcM iMMGVc StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy iPubuO"
            >
              <span
                class="StyledText-dmaDlZ cuXUhH"
              >
                B
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-bnfSpy gMydNw"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              zero
            </span>
          </div>
        </td>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          />
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              one
            </span>
          </div>
        </td>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              two
            </span>
          </div>
        </td>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              2
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`DataTable sort 2`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <table
    class="StyledDataTable-IgJCp kyMnvB"
  >
    <thead
      class="StyledDataTable__StyledDataTableHeader-hWAKAt kjOblm"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <th
          class="StyledTable__StyledTableCell-jCdKZQ kMLoGk"
          scope="col"
        >
          <button
            class="Sorter__SorterButton-hLSXcM iMMGVc StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy iPubuO"
            >
              <span
                class="StyledText-dmaDlZ cuXUhH"
              >
                A
              </span>
              <div
                class="StyledBox__StyledBoxGap-eHDBek cXBKdA"
              />
              <svg
                aria-label="FormDown"
                class="StyledIcon-kFlXVF Vjeah"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </th>
        <th
          class="StyledTable__StyledTableCell-jcjgiI iiOWqn"
          scope="col"
        >
          <button
            class="Sorter__SorterButton-hLSXcM iMMGVc StyledButton-qbvYY vVYVk"
            type="button"
          >
            <div
              class="StyledBox-YaZNy iPubuO"
            >
              <span
                class="StyledText-dmaDlZ cuXUhH"
              >
                B
              </span>
            </div>
          </button>
        </th>
      </tr>
    </thead>
    <tbody
      class="StyledDataTable__StyledDataTableBody-bnfSpy gMydNw"
    >
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              one
            </span>
          </div>
        </td>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              1
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              two
            </span>
          </div>
        </td>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              2
            </span>
          </div>
        </td>
      </tr>
      <tr
        class="StyledDataTable__StyledDataTableRow-cYyilN jnWAoC"
      >
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          >
            <span
              class="StyledText-dmaDlZ cuXUhH"
            >
              zero
            </span>
          </div>
        </td>
        <td
          class="StyledTable__StyledTableCell-KsYQQ cldKKw"
        >
          <div
            class="StyledBox-YaZNy ilPJMQ"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
